# i_am_coin

./: Cargo.toml
src/: camera.rs  controller.rs  debug.rs  debug2.rs  game_const.rs  helpers.rs  main.rs  pause_menu.rs  player.rs  testmap.rs  ui.rs  ui_interaction.rs
src/old_movement/: camera_move.rs
