[package]
name = "i_am_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.2"
bevy_pbr = "0.10.1"
bevy_window = "0.10.0"
bevy_xpbd_3d = "0.2.0"